--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 data/
+out/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,r,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,r,macos
